Hidden pageviews as per PR from lifecruiser, moved the HEX and Referral out of the blog profile into

--- a/src/app/locales/en.json
+++ b/src/app/locales/en.json
@@ -63,7 +63,7 @@
     "in_reply_to": "in reply to",
     "insufficient_balance": "Insufficient balance",
     "invalid_amount": "Invalid amount",
-    "joined": "Joined",
+    "joined": "Member since:",
     "loading": "Loading",
     "login": "Login",
     "logout": "Logout",
