--- a/src/app/locales/es.json
+++ b/src/app/locales/es.json
@@ -38,7 +38,7 @@
     "in_reply_to": "in reply to",
     "insufficient_balance": "Insufficient balance",
     "invalid_amount": "Invalid amount",
-    "joined": "Joined",
+    "joined": "Miembro desde:",
     "loading": "Loading",
     "login": "Login",
     "logout": "Logout",
